Add normalized pyramid & tiles
